data saved to db using form

--- a/templates/response.html
+++ b/templates/response.html
@@ -8,7 +8,7 @@
 <body>
  <h1>Add data</h1>   
 
- <form action"/record" method="post">
+ <form action"/db_record" method="post">
     Name:
     <input type="text" name="name"> <br><br>
     City:
