data saved to db using form

--- a/templates/response.html
+++ b/templates/response.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,14 +8,14 @@
 <body>
  <h1>Add data</h1>   
 
- <form action"/db_record" method="post">
+ <form action="/db_record" method="post">
     Name:
     <input type="text" name="name"> <br><br>
     City:
     <input type="text" name="city">   <br><br>
     Contact:
     <input type="text" name="contact">   <br><br>
-    <input type="submit" name="submit Data">
+    <input type="submit" value="submit Data">
  </form>
 </body>
 </html>
